  BugFix: Translatable strings having space before colon (#1971868)
  BugFix: Wrong cursor position when disabling selection margin (#2138555)
  BugFix: Showed a black line when disabling selection margin (#2068790)
  BugFix: Fix manual URL in Readme.txt (#2181628)
  BugFix: Long unique paths were mixed up in folder compare view (#2129634)
  Bugfix: Some calls made to plugins when plugins were disabled (#2182788)

WinMerge 2.11.1.5 2008-10-02 (r5995)
  Use external editor to edit file filters (#2082774)
  Improved command line handling (#2081779)
  Change Manual url to http://winmerge.org/docs/manual/ (r5956)
  Manual updates
  Plugins: Show processing instructions in XML plugin (#1979321)
  Add icon for "Compare" menu item (#2119843)
  Change download URL to current URL (#2136765)
  Installer: create backup of ClearCase config file (#2129095)
  BugFix: ClearCase checkout/commit dialog translation error (#2051069)
  BugFix: Table of Contents in manual (#2071625)
  BugFix: Highlight ShowUnInstDetails keyword for NSIS files (#2084879)
  BugFix: Displayed a blank time when file last modified time is 00:00:00
   (#2098626)
  BugFix: Customized colors weren't used in some areas (#2110218)
  BugFix: Zip files were extracted into wrong folder (#2110350)
  BugFix: Case-sensitive regexp search didn't work (#1991259)
  BugFix: There were some installer regressions
         (eg. Installer didn't create Quick Launch icon) (#1460517)
  BugFix: Whitespace ignore options didn't work with quick compare (#2120174)
  BugFix: Giving path to file and folder to command line
   did not work (#2138560)
  New translation: Galician (#2120685)
  Translation updates:
  - German (r5934)
  - Russian (#2067785)
  - Swedish (#2075513)
  - Ukrainian (#2131753)

WinMerge 2.11.1.4 - 2008-08-21 (r5846)
  Binary file edit/compare (#2036603)
  Add wait cursor for undo and redo (#2039228)
  Add icon for "Open Conflict File" menu item (#2047054)