@@ -12,7 +12,9 @@ WinMerge 2.11.1.6
   BugFix: Showed a black line when disabling selection margin (#2068790)
   BugFix: Fix manual URL in Readme.txt (#2181628)
   BugFix: Long unique paths were mixed up in folder compare view (#2129634)
-  Bugfix: Some calls made to plugins when plugins were disabled (#2182788)
+  BugFix: Some calls made to plugins when plugins were disabled (#2182788)
+  BugFix: If messagebox was shown during file loading location pane
+    didn't show any differences (#2101780)
 
 WinMerge 2.11.1.5 2008-10-02 (r5995)
   Use external editor to edit file filters (#2082774)
